# fluentqa-checker

./: .gitignore  README-zh.md  README.md  pyproject.toml  reference.yaml
qpychecker/: check.py
qpychecker/checkers/: __init__.py  base.py  booleans.py  collections.py  dicts.py  exceptions.py  numbers.py  sequences.py  strings.py  types.py  uuids.py
tests/: test_strings.py
tests/tests_check/: test_basic_checks.py  test_booleans.py
